--- a/ground_truth/Makefile
+++ b/ground_truth/Makefile
@@ -1,5 +1,5 @@
 .PHONY : clean
 
 clean:
-	rm -rf *.bpseq *.structure *.fa *.isac *.sasa *.truth *.gamma *.beta *.map *~
+	rm -rf *.bpseq *.structure *.fa *.isac *.sasa *.truth *.gamma *.beta *.map *.ct *.valid *~
 
