--- a/ground_truth/.gitignore
+++ b/ground_truth/.gitignore
@@ -2,13 +2,12 @@
 *.structure
 *.fa
 *.isac
-pT181*
-RNaseP_WT*
-SHAPE.t2g
-spikes_info.txt
+*.ct
+*.valid
+*.sasa
+*.pdb
 *.truth
 *~
 *.map
 *.beta
 *.gamma
-
