--- a/ground_truth/Snakefile
+++ b/ground_truth/Snakefile
@@ -114,6 +114,8 @@ rule calc_yeast_valid:
 	shell:
 		"{script_path}/gen_gt_pos {input} {output}"
 
+
+# spike-in experiments
 rule unzip_SHAPE_MaP:
 	input:
 		expand("{path}/SHAPE-MaP.zip", path = gt_path)
@@ -125,7 +127,7 @@ rule unzip_SHAPE_MaP:
 rule process_SHAPE_MaP:
 	input:
 		expand("{path}/{{seqname}}.1m7.map", path = gt_path),
-		expand("{path}/structure_seq_sorted_PROBer.gamma", path = exp_path)
+		expand("{path}/structure_seq_sorted_PROBer.{suffix}", path = exp_path, suffix = ["beta", "gamma"])
 	params:
 		output_name = "{path}/{{seqname}}".format(path = gt_path),
 		seed = "0"
@@ -133,7 +135,6 @@ rule process_SHAPE_MaP:
 		expand("{path}/{{seqname}}.{suffix}", path = gt_path, suffix = ["fa", "gamma", "beta"])
 	shell:
 		"{script_path}/processSHAPEMaP {input} {params.seed} {params.output_name}"
-
 
 
 rule generate_pseudoU_ground_truth:
