--- a/tools/Snakefile
+++ b/tools/Snakefile
@@ -46,11 +46,18 @@ rule build_rsem:
 		"cd {wildcards.name} && make"
 
 rule build_PROBer:
-	input: "{name}.tar.gz"
-	output: touch(expand("{{name}}/build/src/{cmd}", cmd = ["PROBer", "PROBer-single-batch-estimate"]))
+	input: tool_path + "/PROBer-0.2.0.tar.gz"
+	output: touch(PROBer, PROBer_single, PROBer_sampler)
 	shell:
 		"tar -C {tool_path} -xzf {input} && "
-		"mkdir -p {wildcards.name}/build && cd {wildcards.name}/build && cmake .. && make"
+		"mkdir -p {tool_path}/PROBer-0.2.0/build && cd {tool_path}/PROBer-0.2.0/build && cmake .. && make"
+
+rule build_PROBer_full_model:
+	input: tool_path + "/PROBer_full_model.tar.gz"
+	output: touch(PROBer_full_model)
+	shell:
+		"tar -C {tool_path} -xzf {input} && "
+		"mkdir -p {tool_path}/PROBer_full_model/build && cd {tool_path}/PROBer_full_model/build && cmake .. && make"
 
 rule build_RNAstructure:
 	input: "{name}Source.tgz"
