--- a/tools/Snakefile
+++ b/tools/Snakefile
@@ -47,7 +47,7 @@ rule build_rsem:
 
 rule build_PROBer:
 	input: tool_path + "/PROBer-0.2.0.tar.gz"
-	output: touch(PROBer, PROBer_single, PROBer_sampler)
+	output: touch([PROBer, PROBer_single, PROBer_sampler])
 	shell:
 		"tar -C {tool_path} -xzf {input} && "
 		"mkdir -p {tool_path}/PROBer-0.2.0/build && cd {tool_path}/PROBer-0.2.0/build && cmake .. && make"
